Fri Sep 17 16:42:06 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Fix problem in the template file handling where sendmail
				variables did't work after clamav variables.
				Thanks to "Sergey Y. Afonin" <asy@kraft-s.ru>
				for pointing this out

Fri Sep 17 14:47:53 BST 2004 (njh)
----------------------------------
  * libclamav:	Scan yEnc mime attachments

Fri Sep 17 11:56:58 BST 2004 (njh)
----------------------------------
  * libclamav:	Handle even more attempts to falsify the mime type

Fri Sep 17 11:06:42 BST 2004 (trog)
-----------------------------------
  * libclamav/htmlnorm.c: fix breakage resulting from yesterdays change

Fri Sep 17 10:49:30 BST 2004 (njh)
----------------------------------
  * libclamav:	Handle attempts to falsify the mime type

Fri Sep 17 10:10:13 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Improved handling of RFC822 comments in headers

Thu Sep 16 21:14:08 CEST 2004 (tk)
----------------------------------
  * sigtool: add support for new database names

Thu Sep 16 19:02:38 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Handle RFC2047 encoded headers

Thu Sep 16 16:57:11 BST 2004 (njh)
----------------------------------
  * libclamav/message.c:	Handle double colons e.g.:
					Content-Type:: multipart/mixed

Thu Sep 16 15:25:26 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Handle mime types in quotation marks such as:
				Content-Type: "multipart/mixed"

Thu Sep 16 14:30:15 BST 2004 (trog)
-----------------------------------
  * libclamav/htmlnorm.c: properly initialise output buffer

Thu Sep 16 14:00:05 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Handle broken email headers that use equals signs or
				space to separate key from data insead of colon

Thu Sep 16 12:20:59 BST 2004 (njh)
----------------------------------
  * libvclamav/mbox.c:	Improved handling of line breaks in the middle of