@@ -852,7 +852,7 @@ static int cli_vba_scandir(const char *dirname, const char **virname, long int *
 	    if(!data) {
 		cli_dbgmsg("VBADir: WARNING: VBA project '%s' decompressed to NULL\n", vba_project->name[i]);
 	    } else {
-		if(cl_scanbuff(data, data_len, virname, root) == CL_VIRUS) {
+		if(cli_scanbuff(data, data_len, virname, root, CL_TYPE_MSOLE2) == CL_VIRUS) {
 		    free(data);
 		    ret = CL_VIRUS;
 		    break;
@@ -893,7 +893,7 @@ static int cli_vba_scandir(const char *dirname, const char **virname, long int *
 		if(!data) {
 			cli_dbgmsg("VBADir: WARNING: WM project '%s' macro %d decrypted to NULL\n", vba_project->name[i], i);
 		} else {
-			if(cl_scanbuff(data, vba_project->length[i], virname, root) == CL_VIRUS) {
+			if(cli_scanbuff(data, vba_project->length[i], virname, root, CL_TYPE_MSOLE2) == CL_VIRUS) {
 				free(data);
 				ret = CL_VIRUS;
 				break;
