@@ -226,17 +226,13 @@ int build(struct optstruct *opt)
 	struct tm *brokent;
 	struct cl_cvd *oldcvd = NULL;
 
-    /* build a tar.gz archive
-     * we need: COPYING and {main.db, main.hdb, daily.db, daily.hdb}+
-     * in current working directory
-     */
 
     if(stat("COPYING", &foo) == -1) {
 	mprintf("COPYING file not found in current working directory.\n");
 	exit(1);
     }
 
-    if(stat("main.db", &foo) == -1 && stat("daily.db", &foo) == -1 && stat("main.hdb", &foo) == -1 && stat("daily.hdb", &foo)) {
+    if(stat("main.db", &foo) == -1 && stat("daily.db", &foo) == -1 && stat("main.hdb", &foo) == -1 && stat("daily.hdb", &foo) == -1 && stat("main.ndb", &foo) == -1 && stat("daily.ndb", &foo) == -1) {
 	mprintf("Virus database not found in current working directory.\n");
 	exit(1);
     }
@@ -256,7 +252,7 @@ int build(struct optstruct *opt)
 	mprintf("WARNING: There are no signatures in the database(s).\n");
     } else {
 	mprintf("Signatures: %d\n", no);
-	realno = countlines("main.db") + countlines("daily.db") + countlines("main.hdb") + countlines("daily.hdb");
+	realno = countlines("main.db") + countlines("daily.db") + countlines("main.hdb") + countlines("daily.hdb") + countlines("main.ndb") + countlines("daily.ndb");
 	if(realno != no) {
 	    mprintf("!Signatures in database: %d. Loaded: %d.\n", realno, no);
 	    mprintf("Please check the current directory and remove unnecessary databases\n");
@@ -273,7 +269,7 @@ int build(struct optstruct *opt)
 	    exit(1);
 	case 0:
 	    {
-		char *args[] = { "tar", "-cvf", NULL, "COPYING", "main.db", "daily.db", "Notes", "viruses.db3", "main.hdb", "daily.hdb", NULL };
+		char *args[] = { "tar", "-cvf", NULL, "COPYING", "main.db", "daily.db", "Notes", "viruses.db3", "main.hdb", "daily.hdb", "main.ndb", "daily.ndb", NULL };
 		args[2] = tarfile;
 		execv("/bin/tar", args);
 		mprintf("!Can't execute tar\n");
@@ -663,7 +659,7 @@ int listdb(const char *filename)
 	    mprintf("%s\n", start);
 	}
 
-    } else if(cli_strbcasestr(filename, ".hdb") || cli_strbcasestr(filename, ".hdb2")) {
+    } else if(cli_strbcasestr(filename, ".hdb")) {
 
 	while(fgets(buffer, FILEBUFF, fd)) {
 	    line++;
@@ -684,6 +680,26 @@ int listdb(const char *filename)
 	    free(start);
 	}
 
+    } else if(cli_strbcasestr(filename, ".ndb")) {
+
+	while(fgets(buffer, FILEBUFF, fd)) {
+	    line++;
+	    cli_chomp(buffer);
+	    start = cli_strtok(buffer, 0, ":");
+
+	    if(!start) {
+		mprintf("!listdb(): Malformed pattern line %d (file %s).\n", line, filename);
+		fclose(fd);
+		free(buffer);
+		return -1;
+	    }
+
+	    if((pt = strstr(start, " (Clam)")))
+		*pt = 0;
+
+	    mprintf("%s\n", start);
+	    free(start);
+	}
     }
 
     fclose(fd);
@@ -712,7 +728,7 @@ int listdir(const char *dirname)
 	    (cli_strbcasestr(dent->d_name, ".db")  ||
 	     cli_strbcasestr(dent->d_name, ".db2") ||
 	     cli_strbcasestr(dent->d_name, ".hdb") ||
-	     cli_strbcasestr(dent->d_name, ".hdb2") ||
+	     cli_strbcasestr(dent->d_name, ".ndb") ||
 	     cli_strbcasestr(dent->d_name, ".cvd"))) {
 
 		dbfile = (char *) mcalloc(strlen(dent->d_name) + strlen(dirname) + 2, sizeof(char));
